adciona habilidades ao portfolio

--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
 <body>
     <h1>Rian Silva Alves</h1>
     <p>Estudante de programação full-stack na Trybe =)</p>
+    <p>Algumas habilidades das quais me orgulho:</p>
+    <ul>
+        <li>Comprometimento</li>
+        <li>Força</li>
+        <li>Determinação</li>
+    </ul>
+    <p>Algumas outras habilidades:</p>
+    <ul>
+        <li>Git</li>
+        <li>Ilustração Digital</li>
+        <li>Animação</li>
+    </ul>
 </body>
 </html>
