--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Rian Silva Alves</h1>
-    <p>Estudante de programação full-stack na Trybe =)</p>
+    <p>Estudante de programação full-stack na Trybe =) || Brasil, São Paulo, SP</p>
     <p>Algumas habilidades das quais me orgulho:</p>
     <ul>
         <li>Comprometimento</li>
