--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
     <h1>Rian Silva Alves</h1>
     <p>Estudante de programação full-stack na Trybe =) || Brasil, São Paulo, SP</p>
+    <a href="https://github.com/rian-sa" target="_blank">GitHub</a>
+    <br><br>
+    <a href="https://www.deviantart.com/ryanlynxart" target="_blank" >DeviantArt</a>
     <p>Algumas habilidades das quais me orgulho:</p>
     <ul>
         <li>Comprometimento</li>
