--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 </head>
 <body>
     <h1>Rian Silva Alves</h1>
-    <p>Estudante de programação full-stack na Trybe =) || Brasil, São Paulo, SP</p>
+    <b><p>Estudante de programação full-stack na Trybe =) || Brasil, São Paulo, SP</p></b>
     <a href="https://github.com/rian-sa" target="_blank">GitHub</a>
     <br><br>
     <a href="https://www.deviantart.com/ryanlynxart" target="_blank" >DeviantArt</a>
-    <p>Algumas habilidades das quais me orgulho:</p>
+    <b><p>Algumas habilidades das quais me orgulho:</p></b>
     <ul>
-        <li>Comprometimento</li>
-        <li>Força</li>
-        <li>Determinação</li>
+        <i><li>Comprometimento</li></i>
+        <i><li>Força</li></i>
+        <i><li>Determinação</li></i>
     </ul>
-    <p>Algumas outras habilidades:</p>
+    <b><p>Algumas outras habilidades:</p></b>
     <ul>
-        <li>Git</li>
-        <li>Ilustração Digital</li>
-        <li>Animação</li>
+        </i><i><li>Git</li></i>
+        <i><li>Ilustração Digital</li></i>
+        <i><li>Animação</li></i>
     </ul>
 </body>
 </html>
