adciona links internos ao portfolio

--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <title>Portfólio</title>
 </head>
 <body>
+    <ul>
+        <a href="#link"><li>Meus Links ;)</li></a>
+        <br>
+        <a href="#hab1"><li>Habilidades</li></a>
+    </ul>
     <h1>Rian Silva Alves</h1>
     <b><p>Estudante de programação full-stack na Trybe =) || Brasil, São Paulo, SP</p></b>
-    <a href="https://github.com/rian-sa" target="_blank">GitHub</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <a id="link" href="https://github.com/rian-sa" target="_blank">GitHub</a>
     <br><br>
     <a href="https://www.deviantart.com/ryanlynxart" target="_blank" >DeviantArt</a>
-    <b><p>Algumas habilidades das quais me orgulho:</p></b>
+    <b><p id="hab1">Algumas habilidades das quais me orgulho:</p></b>
     <ul>
         <i><li>Comprometimento</li></i>
         <i><li>Força</li></i>
         <i><li>Determinação</li></i>
     </ul>
-    <b><p>Algumas outras habilidades:</p></b>
+    <b><p id="hab2">Algumas outras habilidades:</p></b>
     <ul>
         </i><i><li>Git</li></i>
         <i><li>Ilustração Digital</li></i>
