--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <a href="#hab1"><li>Habilidades</li></a>
     </ul>
     <h1>Rian Silva Alves</h1>
+    <img src="./poro.jpg" alt="desenho poro fofo" width="300px">
     <b><p>Estudante de programação full-stack na Trybe =) || Brasil, São Paulo, SP</p></b>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <a id="link" href="https://github.com/rian-sa" target="_blank">GitHub</a>
     <br><br>
     <a href="https://www.deviantart.com/ryanlynxart" target="_blank" >DeviantArt</a>
